<resources>
    <string name="app_name">ArkTap</string>
    <string name="gesture_label">ARGS™</string>
    <string name="gesture_description">ARGS™ can tap the operation start button automatically.\n\nChoose a operation before start, and don\'t forget to allow Auto Deploy.\n\nUsing ARGS™ may lead to account BANS, and we are NOT responsible for this. YOU are choosing to use ARGS™, and if you point the finger at us, we will laugh at you.\n\nThe permissions required by ARGS™ are ONLY used to tap the screen, and it do NOT collect any personal information.\n\nIf you have any questions, please feel free to contact us on GitHub.</string>
    <string name="overlay_label">ARSS™</string>
    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="state_permission_request">App needs permissions</string>
    <string name="state_resolution_unsupported">Resolution not supported</string>
    <string name="state_loading">Service loading…</string>
    <string name="state_ready">Ready to connect</string>
    <string name="msg_permission_overlay">- Display over other apps\nShow a floating window in game to help</string>
    <string name="info_overlay_connected">ARSS™ connected</string>
    <string name="info_overlay_disconnected">ARSS™ disconnected</string>
    <string name="action_overlay_disconnect">Disconnect</string>
    <string name="action_overlay_collapse">Collapse</string>
    <string name="title_recruit">Recruit Guide</string>
    <string name="action_reset">Reset</string>
    <string name="tip_recruit_result_none">No operators here</string>
    <string name="tip_recruit_result_default">Possible operators</string>
    <string name="tip_recruit_result_1">Support Machine and 3:50 is a 1★ operator</string>
    <string name="tip_recruit_result_4">4★ or higher operators available</string>
    <string name="tip_recruit_result_5">5★ or higher operators available!</string>
    <string name="tip_recruit_result_6">Advanced Senior and 9 hour, guarantees a 6★ operator! Congratulations!</string>
    <string name="action_timer">ARGS™ Running time</string>
    <string name="info_timer_min">%d min</string>
    <string name="info_timer_none">∞</string>
    <string name="info_timer_set">Set time for %s</string>
    <string name="action_night">Night mode</string>
    <string name="info_gesture_request">Please start ARGS™</string>
    <string name="info_gesture_connected">ARGS™ start taping</string>
    <string name="info_gesture_disconnected">ARGS™ finished</string>
    <string name="info_gesture_running">ARGS™ is running, %d min left</string>
    <string name="msg_resolution_unsupported">Your device (%d×%d resolution) does not support ARGS™ yet, please contact us on GitHub. Fortunately, ARSS™ is still available.</string>
    <string name="title_about">About</string>
    <string name="action_donate">Donate</string>
    <string name="msg_donate">You can show your gratitude to the developer by making a donation.</string>
    <string name="action_donate_payment">PayPal</string>
    <string name="info_donate_thanks">Thanks for your trust, Doctor</string>
    <string name="title_comment">Rate this app</string>
    <string name="desc_comment">Rate the app on the store</string>
    <string name="title_discuss">Join the conversation</string>
    <string name="desc_discuss">You can follow us on GitHub for updates</string>
    <string name="title_project">Contributing to ArkTap</string>
    <string name="desc_project">Submit issues or pull requests on GitHub</string>
    <string name="version_current">Current version</string>
    <string name="version_checking">Checking for updates…</string>
    <string name="version_checking_failed">Check for updates failed</string>
    <string name="version_latest">This is the latest version</string>
    <string name="version_update">New version available</string>
    <string name="version_type">Version type</string>
    <string name="version_type_beta">This is a beta version named Luna</string>
    <string name="version_type_changed">Version type changed, please reboot your device</string>
    <string name="action_update">Update</string>
    <string name="got_it">Got it</string>
    <string name="go_to_settings">Allow</string>
    <string name="no_thanks">No thanks</string>
    <string name="not_now">Not now</string>
    <string name="error_occurred">Error occurred</string>
    <string name="coming_soon">Coming soon</string>
    <string name="auto_update_title">Auto check</string>
    <string name="auto_update_summary_on">Check for updates according to the schedule</string>
    <string name="auto_update_summary_off">You can check for updates by going to About</string>
    <string name="launch_game_title">Launch game</string>
    <string name="launch_game_summary">Launch the game if necessary</string>
    <string name="launch_package_title">Default launching</string>
    <string name="ascending_star_title">Asc sorted</string>
    <string name="ascending_star_summary">Sort operators by ★ in ascending order</string>
    <string name="recruit_preview_title">Show unreleased</string>
    <string name="recruit_preview_summary">Show unreleased operators in current game</string>
    <string name="scroll_to_result_title">Quick nav</string>
    <string name="scroll_to_result_summary">Scroll to the result area after selecting 5 tags</string>
    <string name="tag_star_6">6★</string>
    <string name="tag_star_5">5★</string>
    <string name="tag_star_4">4★</string>
    <string name="tag_star_3">3★</string>
    <string name="tag_star_2">2★</string>
    <string name="tag_star_1">1★</string>
    <string name="tag_qualification_6">Advanced Senior</string>
    <string name="tag_qualification_5">Senior</string>
    <string name="tag_qualification_2">Starter</string>
    <string name="tag_qualification_1">Support Machine</string>
    <string name="tag_position_melee">Melee</string>
    <string name="tag_position_ranged">Ranged</string>
    <string name="tag_type_vanguard">Vanguard</string>
    <string name="tag_type_sniper">Sniper</string>
    <string name="tag_type_guard">Guard</string>
    <string name="tag_type_caster">Caster</string>
    <string name="tag_type_defender">Defender</string>
    <string name="tag_type_medic">Medic</string>
    <string name="tag_type_special">Special</string>
    <string name="tag_type_supporter">Supporter</string>
    <string name="tag_affix_survival">Survival</string>
    <string name="tag_affix_aoe">AoE</string>
    <string name="tag_affix_slow">Slow</string>
    <string name="tag_affix_healing">Healing</string>
    <string name="tag_affix_dps">DPS</string>
    <string name="tag_affix_defense">Defense</string>
    <string name="tag_affix_dp">DP-Recovery</string>
    <string name="tag_affix_redeploy">Fast-Redeploy</string>
    <string name="tag_affix_debuff">Debuff</string>
    <string name="tag_affix_support">Support</string>
    <string name="tag_affix_shift">Shift</string>
    <string name="tag_affix_summon">Summon</string>
    <string name="tag_affix_nuker">Nuker</string>
    <string name="tag_affix_control">Crowd-Control</string>
    <string name="version_type_lite" translatable="false">Lily</string>
    <string name="version_type_pro" translatable="false">Originium</string>
    <string name="tag_time_3" translatable="false">7:40～9:00</string>
    <string name="tag_time_2" translatable="false">4:00～7:30</string>
    <string name="tag_time_1" translatable="false">1:00～3:50</string>
    <string name="data_recruit">data/recruit_en.json</string>
    <string name="special_thanks_title">Heartfelt thanks</string>
    <string name="special_thanks_desc">Satoshi Lee - Japanese translation</string>
    <string name="special_thanks_extra">And of course, you.\nThank you so much for using ArkTap!\n© 2020 Icebem</string>
</resources>
