<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_recruit_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/container_margin"
        android:layout_marginEnd="@dimen/container_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container_recruit_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/group_recruit_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/tag_time_3"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_5"
                        android:text="@string/tag_time_3" />

                    <RadioButton
                        android:id="@+id/tag_time_2"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_3"
                        android:text="@string/tag_time_2" />

                    <RadioButton
                        android:id="@+id/tag_time_1"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_1"
                        android:text="@string/tag_time_1" />
                </RadioGroup>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tag_star_6"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_6"
                        android:text="@string/tag_star_6" />

                    <CheckBox
                        android:id="@+id/tag_star_5"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_5"
                        android:text="@string/tag_star_5" />

                    <CheckBox
                        android:id="@+id/tag_star_4"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_4"
                        android:text="@string/tag_star_4" />

                    <CheckBox
                        android:id="@+id/tag_star_3"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_3"
                        android:text="@string/tag_star_3" />

                    <CheckBox
                        android:id="@+id/tag_star_2"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_2"
                        android:text="@string/tag_star_2" />

                    <CheckBox
                        android:id="@+id/tag_star_1"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_1"
                        android:text="@string/tag_star_1" />
                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tag_qualification_6"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_6"
                        android:text="@string/tag_qualification_6" />

                    <CheckBox
                        android:id="@+id/tag_qualification_5"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_5"
                        android:text="@string/tag_qualification_5" />

                    <CheckBox
                        android:id="@+id/tag_qualification_2"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_2"
                        android:text="@string/tag_qualification_2" />

                    <CheckBox
                        android:id="@+id/tag_qualification_1"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_star_1"
                        android:text="@string/tag_qualification_1" />
                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tag_position_melee"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_position_melee" />

                    <CheckBox
                        android:id="@+id/tag_position_ranged"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_position_ranged" />
                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tag_type_vanguard"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_type_vanguard" />

                    <CheckBox
                        android:id="@+id/tag_type_sniper"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_type_sniper" />

                    <CheckBox
                        android:id="@+id/tag_type_guard"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_type_guard" />

                    <CheckBox
                        android:id="@+id/tag_type_caster"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_type_caster" />

                    <CheckBox
                        android:id="@+id/tag_type_defender"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_type_defender" />

                    <CheckBox
                        android:id="@+id/tag_type_medic"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_type_medic" />

                    <CheckBox
                        android:id="@+id/tag_type_special"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_type_special" />

                    <CheckBox
                        android:id="@+id/tag_type_supporter"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_type_supporter" />
                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tag_affix_survival"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_survival" />

                    <CheckBox
                        android:id="@+id/tag_affix_aoe"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_aoe" />

                    <CheckBox
                        android:id="@+id/tag_affix_slow"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_slow" />

                    <CheckBox
                        android:id="@+id/tag_affix_healing"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_healing" />

                    <CheckBox
                        android:id="@+id/tag_affix_dps"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_dps" />

                    <CheckBox
                        android:id="@+id/tag_affix_defense"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_defense" />

                    <CheckBox
                        android:id="@+id/tag_affix_dp"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_dp" />

                    <CheckBox
                        android:id="@+id/tag_affix_redeploy"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_redeploy" />

                    <CheckBox
                        android:id="@+id/tag_affix_debuff"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_debuff" />

                    <CheckBox
                        android:id="@+id/tag_affix_support"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_support" />

                    <CheckBox
                        android:id="@+id/tag_affix_shift"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_shift" />

                    <CheckBox
                        android:id="@+id/tag_affix_summon"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_summon" />

                    <CheckBox
                        android:id="@+id/tag_affix_nuker"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_nuker" />

                    <CheckBox
                        android:id="@+id/tag_affix_control"
                        style="@style/CheckBoxTagStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_affix_control" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_recruit_tips"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/control_margin"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="@string/tip_recruit_result_none"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/action_recruit_reset"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorError"
                android:text="@string/action_reset"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_recruit_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/control_padding" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>