<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.icebem.akt.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_recruit"
        android:name="com.icebem.akt.ui.recruit.RecruitFragment"
        android:label="@string/title_recruit"
        tools:layout="@layout/fragment_recruit" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.icebem.akt.ui.settings.SettingsFragment"
        android:label="@string/action_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.icebem.akt.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>