<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOverlay"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="@dimen/view_padding"
            android:text="@string/title_overlay_hr"
            android:textColor="@android:color/white"
            android:textSize="@dimen/control_text_size" />

        <Button
            android:id="@+id/action_disconnect"
            style="@style/AppTheme.Button.Borderless.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/action_overlay_disconnect"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/control_text_size" />

        <Button
            android:id="@+id/action_collapse"
            style="@style/AppTheme.Button.Borderless.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/view_padding"
            android:text="@string/action_overlay_collapse"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/control_text_size" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/container_margin"
            android:layout_marginEnd="@dimen/container_margin"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tag_star_6"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_deep_orange"
                        android:checked="true"
                        android:text="@string/tag_star_6" />

                    <CheckBox
                        android:id="@+id/tag_star_5"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_orange"
                        android:checked="true"
                        android:text="@string/tag_star_5" />

                    <CheckBox
                        android:id="@+id/tag_star_4"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_deep_purple"
                        android:checked="true"
                        android:text="@string/tag_star_4" />

                    <CheckBox
                        android:id="@+id/tag_star_3"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_green"
                        android:checked="true"
                        android:text="@string/tag_star_3" />

                    <CheckBox
                        android:id="@+id/tag_star_2"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_brown"
                        android:text="@string/tag_star_2" />

                    <CheckBox
                        android:id="@+id/tag_star_1"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_checkbox_gray"
                        android:text="@string/tag_star_1" />
                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/tag_qualification_3"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_qualification_3" />

                    <CheckBox
                        android:id="@+id/tag_qualification_2"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_qualification_2" />

                    <CheckBox
                        android:id="@+id/tag_qualification_1"
                        style="@style/AppTheme.CheckBox.Tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_qualification_1" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/txt_hr_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/control_margin"
                android:text="@string/tip_hr_result_1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/control_text_size" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>